--- a/.promu.yml
+++ b/.promu.yml
@@ -4,11 +4,11 @@ repository:
 build:
     flags: -a -tags netgo
     ldflags: |
-        -X main.buildVersion={{.Version}}
-        -X main.buildRev={{.Revision}}
-        -X main.buildBranch={{.Branch}}
-        -X main.buildUser={{user}}@{{host}}
-        -X main.buildDate={{date "20060102-15:04:05"}}
+        -X {{repoPath}}/vendor/github.com/prometheus/common/version.Version={{.Version}}
+        -X {{repoPath}}/vendor/github.com/prometheus/common/version.Revision={{.Revision}}
+        -X {{repoPath}}/vendor/github.com/prometheus/common/version.Branch={{.Branch}}
+        -X {{repoPath}}/vendor/github.com/prometheus/common/version.BuildUser={{user}}@{{host}}
+        -X {{repoPath}}/vendor/github.com/prometheus/common/version.BuildDate={{date "20060102-15:04:05"}}
 tarball:
     files:
         - LICENSE
