--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,8 @@ jobs:
     working_directory: /go/src/github.com/prometheus/pushgateway
 
     environment:
-      DOCKER_IMAGE_NAME: prom/snmp-exporter
-      QUAY_IMAGE_NAME: quay.io/prometheus/snmp-exporter
+      DOCKER_IMAGE_NAME: prom/pushgateway
+      QUAY_IMAGE_NAME: quay.io/prometheus/pushgateway
 
     steps:
     - checkout
@@ -56,8 +56,8 @@ jobs:
     working_directory: /go/src/github.com/prometheus/pushgateway
 
     environment:
-      DOCKER_IMAGE_NAME: prom/snmp-exporter
-      QUAY_IMAGE_NAME: quay.io/prometheus/snmp-exporter
+      DOCKER_IMAGE_NAME: prom/pushgateway
+      QUAY_IMAGE_NAME: quay.io/prometheus/pushgateway
 
     steps:
     - checkout
@@ -65,6 +65,8 @@ jobs:
     - run: mkdir -v -p ${HOME}/bin
     - run: curl -L 'https://github.com/aktau/github-release/releases/download/v0.7.2/linux-amd64-github-release.tar.bz2' | tar xvjf - --strip-components 3 -C ${HOME}/bin
     - run: echo 'export PATH=${HOME}/bin:${PATH}' >> ${BASH_ENV}
+    - attach_workspace:
+        at: .
     - run: make promu
     - run: promu crossbuild tarballs
     - run: promu checksum .tarballs
