--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,24 @@
 ---
 version: 2.1
 
-jobs:
-  test:
+executors:
+  # Whenever the Go version is updated here, .travis.yml and .promu.yml
+  # should also be updated.
+  golang:
     docker:
     - image: circleci/golang:1.11
-    working_directory: /go/src/github.com/prometheus/pushgateway
+
+jobs:
+  test:
+    executor: golang
 
     steps:
     - checkout
     - run: make promu
     - run: make check_license style unused staticcheck build test
+    - store_artifacts:
+        path: pushgateway
+        destination: /build/pushgateway
     - run: rm -v pushgateway
 
   build:
@@ -27,13 +35,7 @@ jobs:
         - .build
 
   docker_hub_master:
-    docker:
-    - image: circleci/golang:1.11
-    working_directory: /go/src/github.com/prometheus/pushgateway
-
-    environment:
-      DOCKER_IMAGE_NAME: prom/pushgateway
-      QUAY_IMAGE_NAME: quay.io/prometheus/pushgateway
+    executor: golang
 
     steps:
     - checkout
@@ -41,22 +43,16 @@ jobs:
     - attach_workspace:
         at: .
     - run: ln -s .build/linux-amd64/pushgateway pushgateway
-    - run: make docker DOCKER_IMAGE_NAME=$DOCKER_IMAGE_NAME
-    - run: make docker DOCKER_IMAGE_NAME=$QUAY_IMAGE_NAME
+    - run: make docker
+    - run: make docker DOCKER_REPO=quay.io/prometheus
     - run: docker images
     - run: docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
     - run: docker login -u $QUAY_LOGIN -p $QUAY_PASSWORD quay.io
-    - run: docker push $DOCKER_IMAGE_NAME
-    - run: docker push $QUAY_IMAGE_NAME
+    - run: make docker-publish
+    - run: make docker-publish DOCKER_REPO=quay.io/prometheus
 
   docker_hub_release_tags:
-    docker:
-    - image: circleci/golang:1.11
-    working_directory: /go/src/github.com/prometheus/pushgateway
-
-    environment:
-      DOCKER_IMAGE_NAME: prom/pushgateway
-      QUAY_IMAGE_NAME: quay.io/prometheus/pushgateway
+    executor: golang
 
     steps:
     - checkout
@@ -75,17 +71,17 @@ jobs:
         destination: releases
     - run: ln -s .build/linux-amd64/pushgateway pushgateway
     - run: ln -s .build/linux-amd64/promtool promtool
-    - run: make docker DOCKER_IMAGE_NAME=$DOCKER_IMAGE_NAME DOCKER_IMAGE_TAG=$CIRCLE_TAG
-    - run: make docker DOCKER_IMAGE_NAME=$QUAY_IMAGE_NAME DOCKER_IMAGE_TAG=$CIRCLE_TAG
+    - run: make docker DOCKER_IMAGE_TAG=$CIRCLE_TAG
+    - run: make docker DOCKER_IMAGE_TAG=$CIRCLE_TAG DOCKER_REPO=quay.io/prometheus
     - run: docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
     - run: docker login -u $QUAY_LOGIN -p $QUAY_PASSWORD quay.io
     - run: |
         if [[ "$CIRCLE_TAG" =~ ^v[0-9]+(\.[0-9]+){2}$ ]]; then
-          docker tag "$DOCKER_IMAGE_NAME:$CIRCLE_TAG" "$DOCKER_IMAGE_NAME:latest"
-          docker tag "$QUAY_IMAGE_NAME:$CIRCLE_TAG" "$QUAY_IMAGE_NAME:latest"
+          make docker-tag-latest DOCKER_IMAGE_TAG="$CIRCLE_TAG"
+          make docker-tag-latest DOCKER_IMAGE_TAG="$CIRCLE_TAG" DOCKER_REPO=quay.io/prometheus
         fi
-    - run: docker push $DOCKER_IMAGE_NAME
-    - run: docker push $QUAY_IMAGE_NAME
+    - run: make docker-publish
+    - run: make docker-publish DOCKER_REPO=quay.io/prometheus
 
 workflows:
   version: 2
