--- a/.promu.yml
+++ b/.promu.yml
@@ -1,7 +1,7 @@
 repository:
     path: github.com/prometheus/pushgateway
 build:
-    flags: -a -tags netgo
+    flags: -mod=vendor -a -tags netgo
     ldflags: |
         -X {{repoPath}}/vendor/github.com/prometheus/common/version.Version={{.Version}}
         -X {{repoPath}}/vendor/github.com/prometheus/common/version.Revision={{.Revision}}
