--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 ---
 version: 2.1
 
+orbs:
+  prometheus: prometheus/prometheus@0.1.0
+
 executors:
   # Whenever the Go version is updated here, .travis.yml and .promu.yml
   # should also be updated.
@@ -13,77 +16,10 @@ jobs:
     executor: golang
 
     steps:
-    - checkout
-    - run: make promu
+    - prometheus/setup_environment
     - run: make
-    - store_artifacts:
-        path: pushgateway
-        destination: /build/pushgateway
-    - run: rm -v pushgateway
-
-  build:
-    machine: true
-    working_directory: /home/circleci/.go_workspace/src/github.com/prometheus/pushgateway
-
-    steps:
-    - checkout
-    - run: make promu
-    - run: promu crossbuild -v
-    - persist_to_workspace:
-        root: .
-        paths:
-        - .build
-
-  docker_hub_master:
-    executor: golang
-
-    steps:
-    - checkout
-    - setup_remote_docker
-    - attach_workspace:
-        at: .
-    - run: ln -s .build/linux-amd64/pushgateway pushgateway
-    - run: make docker
-    - run: make docker DOCKER_REPO=quay.io/prometheus
-    - run: docker images
-    - run: docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-    - run: docker login -u $QUAY_LOGIN -p $QUAY_PASSWORD quay.io
-    - run: make docker-publish
-    - run: make docker-publish DOCKER_REPO=quay.io/prometheus
-
-  docker_hub_release_tags:
-    executor: golang
-
-    steps:
-    - checkout
-    - setup_remote_docker
-    - run: mkdir -v -p ${HOME}/bin
-    - run: curl -L 'https://github.com/aktau/github-release/releases/download/v0.7.2/linux-amd64-github-release.tar.bz2' | tar xvjf - --strip-components 3 -C ${HOME}/bin
-    - run: echo 'export PATH=${HOME}/bin:${PATH}' >> ${BASH_ENV}
-    - attach_workspace:
-        at: .
-    - run: make promu
-    - run: promu crossbuild tarballs
-    - run: promu checksum .tarballs
-    - run: promu release .tarballs
-    - store_artifacts:
-        path: .tarballs
-        destination: releases
-    - run: ln -s .build/linux-amd64/pushgateway pushgateway
-    - run: ln -s .build/linux-amd64/promtool promtool
-    - run: make docker DOCKER_IMAGE_TAG=$CIRCLE_TAG
-    - run: make docker DOCKER_IMAGE_TAG=$CIRCLE_TAG DOCKER_REPO=quay.io/prometheus
-    - run: docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-    - run: docker login -u $QUAY_LOGIN -p $QUAY_PASSWORD quay.io
-    - run: |
-        if [[ "$CIRCLE_TAG" =~ ^v[0-9]+(\.[0-9]+){2}$ ]]; then
-          make docker-tag-latest DOCKER_IMAGE_TAG="$CIRCLE_TAG"
-          make docker-tag-latest DOCKER_IMAGE_TAG="$CIRCLE_TAG" DOCKER_REPO=quay.io/prometheus
-          make docker-publish DOCKER_IMAGE_TAG="latest"
-          make docker-publish DOCKER_IMAGE_TAG="latest" DOCKER_REPO=quay.io/prometheus
-        fi
-    - run: make docker-publish DOCKER_IMAGE_TAG="$CIRCLE_TAG"
-    - run: make docker-publish DOCKER_REPO=quay.io/prometheus DOCKER_IMAGE_TAG="$CIRCLE_TAG"
+    - prometheus/store_artifact:
+        file: pushgateway
 
 workflows:
   version: 2
@@ -93,18 +29,19 @@ workflows:
         filters:
           tags:
             only: /.*/
-    - build:
+    - prometheus/build:
+        name: build
         filters:
           tags:
             only: /.*/
-    - docker_hub_master:
+    - prometheus/publish_master:
         requires:
         - test
         - build
         filters:
           branches:
             only: master
-    - docker_hub_release_tags:
+    - prometheus/publish_release:
         requires:
         - test
         - build
