--- a/.promu.yml
+++ b/.promu.yml
@@ -6,7 +6,7 @@ go:
 repository:
     path: github.com/prometheus/pushgateway
 build:
-    flags: -a -tags netgo
+    flags: -a -tags netgo -trimpath
     ldflags: |
         -X github.com/prometheus/common/version.Version={{.Version}}
         -X github.com/prometheus/common/version.Revision={{.Revision}}
