--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,48 +1,33 @@
 ---
+# Prometheus has switched to GitHub action.
+# Circle CI is not disabled repository-wise so that previous pull requests
+# continue working.
+# This file does not generate any CircleCI workflow.
+
 version: 2.1
-orbs:
-  prometheus: "prometheus/prometheus@0.17.1"
+
 executors:
-  # Whenever the Go version is updated here, .promu.yml should also be updated.
   golang:
     docker:
-      - image: cimg/go:1.25
+      - image: busybox
+
 jobs:
-  test:
+  noopjob:
     executor: golang
+
     steps:
-      - prometheus/setup_environment
-      - run: make
-      - prometheus/store_artifact:
-          file: pushgateway
+      - run:
+          command: "true"
+
 workflows:
   version: 2
   pushgateway:
     jobs:
-      - test:
-          filters:
-            tags:
-              only: /.*/
-      - prometheus/build:
-          name: build
-          filters:
-            tags:
-              only: /.*/
-      - prometheus/publish_master:
-          context: org-context
-          requires:
-            - test
-            - build
+      - noopjob
+    triggers:
+      - schedule:
+          cron: "0 0 30 2 *"
           filters:
             branches:
-              only: master
-      - prometheus/publish_release:
-          context: org-context
-          requires:
-            - test
-            - build
-          filters:
-            tags:
-              only: /^v[0-9]+(\.[0-9]+){2}(-.+|[^-.]*)$/
-            branches:
-              ignore: /.*/
+              only:
+                - master
